syntax = "proto3";

package traffic;

message ToRDemand {
    // Unique name identifier of source ToR.
    string src = 1;
    // Unique name identifier of destination ToR.
    string dst = 2;
    // Traffic volume in bits/sec.
    uint64 volume = 3;
}

message AggrBlockDemand {
    // Unique name identifier of source aggregation block.
    string src = 1;
    // Unique name identifier of destination aggregation block.
    string dst = 2;
    // Traffic volume in bits/sec.
    uint64 volume = 3;
}

message TrafficDemand {
    // Wrapper of single pair demands because oneof does not support repeated.
    message ToRLevelDemand {
        repeated ToRDemand demands = 1;
    }
    message AggrBlockLevelDemand {
        repeated AggrBlockLevelDemand demands = 1;
    }
    // A traffic demand can either be a ToR-to-ToR demand or an aggregated one.
    oneof demand_level {
        // ToR-to-ToR demands.
        ToRLevelDemand tor_level = 1;
        // AggrBlock-to-AggrBlock demands.
        AggrBlockLevelDemand aggr_block_level = 2;
    }
}
